--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "file-loader": "^6.0.0",
         "git-revision-webpack-plugin": "^3.0.3",
         "mini-css-extract-plugin": "1.3.0",
-        "node-sass": "^5.0.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.1",
         "prettier-check": "^2.0.0",
@@ -75,6 +74,7 @@
     "dependencies": {
         "balloon-css": "^1.0.3",
         "promise-polyfill": "8.2.0",
+        "sass": "^1.94.2",
         "smoothscroll": "0.4.0"
     }
 }
