Add build and test scripts to package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "format": "eslint \"**/*.js\" --fix && prettier \"**/*.{js,json,md}\" --write",
         "format:staged": "eslint \"**/*.js\" --fix && pretty-quick --staged --verbose --pattern \"**/*.{js,json,md}\"",
         "format:check": "eslint \"**/*.js\" && prettier-check \"**/*.{js,json,md}\""
+        "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --colors",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "files": [
         "dist"
